--- a/作业7/Makefile
+++ b/作业7/Makefile
@@ -4,8 +4,12 @@ jsff7:jsff7.f90
 clean:
 	rm jsff7
 run:
-	gfortran -o jsff7 -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90 && git commit -am 'make run' && ./jsff7
+	gfortran -o jsff7 -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90 
+	git commit -am 'make run' 
+	./jsff7
 gdb:
-	gfortran -o jsff7 -g -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90 && git commit -am 'make gdb' && gdb jsff7
+	gfortran -o jsff7 -g -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90 
+	git commit -am 'make gdb' 
+	gdb jsff7
 
 
