--- a/作业7/Makefile
+++ b/作业7/Makefile
@@ -1,18 +1,21 @@
 jsff7:jsff7.f90
 	python ./xls2arr.py
 	gfortran -o jsff7 -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90
-	git commit -am 'make'
+	git add .
+	git commit -m 'make'
 clean:
 	rm jsff7
 run:
 	python ./xls2arr.py
 	gfortran -o jsff7 -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90 
-	git commit -am 'make run' 
+	git add .
+	git commit -m 'make run' 
 	./jsff7
 gdb:
 	python ./xls2arr.py
 	gfortran -o jsff7 -g -fbackslash jsff7.f90 jsff7_1.f90 subroutines.f90 
-	git commit -am 'make gdb' 
+	git add .
+	git commit -m 'make gdb' 
 	gdb jsff7
 
 
